--- a/index.html
+++ b/index.html
@@ -325,7 +325,7 @@
       
 </div>
 <div class="logo">
-    <img src="/img/logo.png" alt="logo" class="logo-picture"/>
+    <img src="https://github.com/SuperMayy/theconference/blob/main/img/logo.png?raw=true" alt="logo" class="logo-picture"/>
 </div>
 <div class="content">
     <h1 class="main-content">"You learn form the best minds in the Industry"</h1>
