--- a/index.html
+++ b/index.html
@@ -333,7 +333,7 @@
         <div class="avatar"></div>
         <p>John Doe - CEO of Invatech</p>
     </div>
-    <a href="livestream.html" class="cta main-content">Join Live Stream</a>
+    <a href="livestream.html" class="cta main-content">Join Live Stream [DESKTOP ONLY!]</a>
 </div>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.5.1/gsap.min.js"></script>
 <script src="script.js"></script>
